$Id$

2013-03-16  Christian Franke  <franke@computer.org>

	smartmontools 6.1

2013-03-15  Christian Franke  <franke@computer.org>

	os_win32.cpp: Support device names /dev/sd[a-z][a-z] (ticket #240).
	Enhance DEVICESCAN to 128 drives.  Add '-d [TYPE,]pd' option.
	smartctl.8.in, smartd.8.in: Document these enhancements.

2013-03-14  Christian Franke  <franke@computer.org>

	drivedb.h:
	- Seagate Barracuda 7200.14: Fix regex for new firmware version.

2013-03-13  Christian Franke  <franke@computer.org>

	drivedb.h:
	- USB: Prolific PL3507 (0x067b:0x3507): works with '-d usbjmicron,p'

2013-03-13  Christian Franke  <franke@computer.org>

	Create branch RELEASE_6_0_DRIVEDB with last drivedb.h file
	compatible with smartmontools 6.0.

2013-03-13  Christian Franke  <franke@computer.org>

	drivedb.h:
	- SandForce Driven SSDs: Fix format of attribute 198 (ticket #258).
	- SandForce Driven SSDs: Corsair Force GS
	- Indilinx Barefoot_2/Everest/Martini based SSDs: OCZ VERTEX PLUS R2
	- Samsung/Seagate SpinPoint M8: 320GB, 640GB
	- Seagate Momentus Thin
	- Quantum Fireball EX: 10.2GB

2013-03-07  Christian Franke  <franke@computer.org>

	ataidentify.cpp, ataprint.cpp: ACS-3 updates.
	ataprint.cpp: Improve device statistics error messages.

2013-03-06  Christian Franke  <franke@computer.org>

	smartd_warning.sh.in: Support BSD variant of 'hostname' command
	which prints FQDN.  Add Windows domain name (Cygwin).

2013-03-01  Douglas Gilbert  <dgilbert@interlog.com>

	scsicmds.h, scsicmds.cpp, scsiprint.cpp:
	- for SCSI disks prefer READ DEFECT(12) for finding the
	  grown defect list length (previously used READ DEFECT(10)
	  only)

2013-03-01  Christian Franke  <franke@computer.org>

	drivedb.h:
	- SandForce Driven SSDs: Transcend SSD320
	- Intel 520 Series SSDs: OEM variant
	- JMicron based SSDs: Transcend SSD25 IDE
	- HGST Travelstar 7K1000
	- Seagate Desktop HDD.15
	- Seagate LD25.2
	- Western Digital RE4 (SATA 6Gb/s)
	- USB: Fujitsu/Zalman ZM-VE300 (0x04c5:0x2028)
